Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-7215

Regression: Wrong text cursor movement when running on Qt 4.8.1

    XMLWordPrintable

Details

    • Bug
    • Status: Closed
    • Not Evaluated
    • Resolution: Done
    • Qt Creator 2.5.0-rc
    • Qt Creator 2.6.0-rc
    • Editors
    • Windows Vista x64
    • 4093ae7ae38f6006f7f8c1438e89777144a0c10b

    Description

      1. Build Creator from current 2.5 branch on Qt 4.8.0.
      2. Run the resulting Creator on Qt 4.8.0.
      3. Open a text file.
      4. Select everything in this file by pressing Ctrl+A.
      5. Press the Left Arrow key.
        The selection will be cleared and the cursor will be right before the last character of the file.
        This is standard behavior in most programs.

      Now do the same with the same Creator running on Qt 4.8.1.
      In step 5, the cursor will be moved to the very beginning of the file. This is non-native behavior and therefore a bug.

      Found by Squish test suite_general/tst_select_all

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              davschul David Schulz
              rlohning Robert Löhning
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes