Restored native behavior when moving cursor from selection

Reverting changes from 1b031759ddfdab9703dfecac13f1ed318da3dafe except
for Mac

Task-number: QTCREATORBUG-7215
Change-Id: I8570c4bd35daf8b5820507a9399d33d00f96d41b
Reviewed-by: Alessandro Portale <alessandro.portale@nokia.com>